--- a/index.html
+++ b/index.html
@@ -3,27 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>这是一篇文章的页面</title>
-    <style>
-        body {
-            background-color: #f1f1f1;
-        }
-        main {
-            margin: 20px;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 5px #888;
-            border-radius: 5px;
-        }
-        h1 {
-            text-align: center;
-            font-size: 26px;
-        }
-        p {
-            font-size: 16px;
-            line-height: 1.5;
-            text-indent: 2em;
-        }
-    </style>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <main>
